# sistema-escolar

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: aluno.h  arquivo.h  menu.h  notas.h  relatorio.h
src/: aluno.c  arquivo.c  main.c  menu.c  notas.c  relatorio.c
